# Secure-ASP

./: README.md
api/: .env  README.md  logging.yaml  pyproject.toml
api/app/: config.py  main.py
api/app/data/models/: __init__.py  certification_request.py  change.py  encoding.py  invalidated_token.py  role.py  tag.py  user.py  user_encoding.py
api/app/data/models/enums/: document_type.py  ownership.py  request_status.py  sort_type.py  user_encoding_sort.py  user_sort.py
api/app/data/repository/: certification_request_repository.py  change_repository.py  encoding_repository.py  invalidated_token_repository.py  role_repository.py  tag_repository.py  user_encoding_repository.py  user_repository.py
api/app/data/services/: auth_service.py  certification_request_service.py  encoding_service.py  invalidated_token_service.py  public_profile_service.py  role_service.py  tag_service.py  user_service.py
api/app/exceptions/: bad_request_exceptions.py  security_exceptions.py
api/app/handlers/: exception_handler.py
api/app/routes/: api.py
api/app/routes/v1/: auth.py  certification_request.py  encodings.py  public_profile.py  roles.py  users.py
api/app/schemas/: certification_request_schemas.py  change_schemas.py  encoding_schema.py  message_schema.py  tag_schema.py  team_schema.py  token_schemas.py  user_encoding_schema.py  user_schemas.py
api/app/util/: bcrypt.py  cryptography.py  database.py  pagination.py  rate_limiter.py  resource_manager.py  storage.py  token.py
api/resources/ssl_cert/: cert.pem  key.pem
api/resources/static/: styles.css
api/resources/templates/: oauth-login-failed.html  oauth-login-successful.html
db/: Dockerfile  dump.sql
scripts/: README.md  generating_csr.py  generating_keys.py  requirements.txt  (+2 more)
(+104 files in other folders)
